samples/_failures_safe/1761212083_ba4eaf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1490a686.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_1490a686.c:124:25: error: expected expression at end of input
  124 |                         if (val_b > INT_MIN / val_a || val_b < INT_MAX /
      |                         ^~
./samples/SAFE/__tmp_1490a686.c:124:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1490a686.c:124:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1490a686.c:124:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1490a686.c:124:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1490a686.c:124:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1490a686.c:124:25: error: expected declaration or statement at end of input
